Add collection view for library

--- a/bookshare/Base.lproj/Main.storyboard
+++ b/bookshare/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1Rr-sF-4YI">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,7 +18,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2xj-CK-ZOy"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="hkZ-jV-2C7">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -37,7 +37,7 @@
                         <viewControllerLayoutGuide type="bottom" id="WiM-uS-Pfh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xbq-sX-uv9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -56,7 +56,7 @@
                         <viewControllerLayoutGuide type="bottom" id="oPx-Sg-FvZ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Dah-66-5Q2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -75,7 +75,7 @@
                         <viewControllerLayoutGuide type="bottom" id="WQ5-bn-tRz"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Smn-i4-Uu0">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -90,46 +90,29 @@
             <objects>
                 <tableViewController id="r03-CR-L9E" customClass="LibraryViewController" customModule="bookshare" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="204" sectionHeaderHeight="28" sectionFooterHeight="28" id="Wwx-Mb-QZG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LibraryIdentifier" rowHeight="204" id="383-FW-WF3">
-                                <rect key="frame" x="0.0" y="28" width="375" height="204"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LibraryIdentifier" rowHeight="204" id="383-FW-WF3" customClass="LibraryTableViewCell" customModule="bookshare" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="204"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="383-FW-WF3" id="GFl-PU-dcA">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="204"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="203"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2Ci-W6-t4j">
-                                            <rect key="frame" x="0.0" y="10" width="90" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2Ci-W6-t4j">
+                                            <rect key="frame" x="5" y="10" width="153" height="20"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="90" id="NFc-82-aK2"/>
+                                                <constraint firstAttribute="width" constant="153" id="NFc-82-aK2"/>
                                                 <constraint firstAttribute="height" constant="20" id="zN6-wx-aKQ"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gqI-yV-71l">
-                                            <rect key="frame" x="0.0" y="30" width="375" height="173"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cover.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="iSi-th-nRM">
-                                                    <rect key="frame" x="21" y="8" width="96" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cover.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="mfD-w8-hVf">
-                                                    <rect key="frame" x="148" y="8" width="96" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cover.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="keE-aU-k2h">
-                                                    <rect key="frame" x="271" y="8" width="96" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                            </subviews>
-                                        </scrollView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See All &gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YcA-ku-Pa3">
-                                            <rect key="frame" x="315" y="15" width="60" height="15"/>
+                                            <rect key="frame" x="260" y="15" width="60" height="15"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="60" id="5Pt-WE-cFI"/>
                                                 <constraint firstAttribute="height" constant="15" id="Tj8-SU-YOD"/>
@@ -138,19 +121,40 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nEz-ps-1yG">
+                                            <rect key="frame" x="0.0" y="30" width="320" height="173.5"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pCI-Zb-YKm">
+                                                <size key="itemSize" width="50" height="50"/>
+                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            </collectionViewFlowLayout>
+                                            <cells>
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="45s-0b-xcz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                    </view>
+                                                </collectionViewCell>
+                                            </cells>
+                                        </collectionView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="nEz-ps-1yG" firstAttribute="top" secondItem="YcA-ku-Pa3" secondAttribute="bottom" id="27j-yv-bt4"/>
                                         <constraint firstAttribute="trailing" secondItem="YcA-ku-Pa3" secondAttribute="trailing" id="5fF-mu-dkk"/>
-                                        <constraint firstItem="gqI-yV-71l" firstAttribute="top" secondItem="YcA-ku-Pa3" secondAttribute="bottom" id="8SV-E6-tuY"/>
-                                        <constraint firstItem="gqI-yV-71l" firstAttribute="leading" secondItem="GFl-PU-dcA" secondAttribute="leading" id="KOp-hX-iwW"/>
-                                        <constraint firstItem="gqI-yV-71l" firstAttribute="top" secondItem="2Ci-W6-t4j" secondAttribute="bottom" id="RW4-Re-ncI"/>
-                                        <constraint firstAttribute="trailing" secondItem="gqI-yV-71l" secondAttribute="trailing" id="Rl6-kM-fYU"/>
-                                        <constraint firstAttribute="bottom" secondItem="gqI-yV-71l" secondAttribute="bottom" id="VnX-fF-Z0d"/>
-                                        <constraint firstItem="2Ci-W6-t4j" firstAttribute="leading" secondItem="GFl-PU-dcA" secondAttribute="leading" id="cme-d1-Zxc"/>
+                                        <constraint firstItem="nEz-ps-1yG" firstAttribute="leading" secondItem="GFl-PU-dcA" secondAttribute="leading" id="6Rv-kt-s8t"/>
+                                        <constraint firstItem="nEz-ps-1yG" firstAttribute="top" secondItem="2Ci-W6-t4j" secondAttribute="bottom" id="DsV-NH-WFy"/>
+                                        <constraint firstAttribute="trailing" secondItem="nEz-ps-1yG" secondAttribute="trailing" id="Mrs-8e-f75"/>
+                                        <constraint firstAttribute="bottom" secondItem="nEz-ps-1yG" secondAttribute="bottom" id="QvA-Ke-rp0"/>
+                                        <constraint firstItem="2Ci-W6-t4j" firstAttribute="leading" secondItem="GFl-PU-dcA" secondAttribute="leading" constant="5" id="cme-d1-Zxc"/>
                                         <constraint firstItem="2Ci-W6-t4j" firstAttribute="top" secondItem="GFl-PU-dcA" secondAttribute="top" constant="10" id="u59-GB-ypn"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="category" destination="2Ci-W6-t4j" id="tmg-VE-bXb"/>
                                     <segue destination="Afh-ia-gbJ" kind="show" id="cLW-yG-dr4"/>
                                 </connections>
                             </tableViewCell>
@@ -164,7 +168,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gy8-y5-XzZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1167.2" y="2228.6356821589206"/>
+            <point key="canvasLocation" x="-1168.125" y="2227.8169014084506"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="7kS-eA-o2X">
@@ -224,7 +228,4 @@
             <point key="canvasLocation" x="-194" y="2230"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="cover.jpg" width="248" height="350"/>
-    </resources>
 </document>
